# Comfyui_TextBatch_aidec

./: README.md  pyproject.toml  新增節點說明.md
.github/workflows/: publish.yml
example/: image2image自循環範例.json
js/: textbatch.js
modules/textbatch/: nodes.py
